syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1680
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AvatarUpgradeReq {
	uint32 item_id = 9;
	uint32 count = 12;
	uint64 avatar_guid = 14;
}
